--- a/card.html
+++ b/card.html
@@ -7,16 +7,16 @@
 </head>
 <body>
 	<div id=outer-border class="border">
-		<h1 id="title">Clownfish</h1>
+		<h1 id="title">Ronto</h1>
 		<!-- Photo Credit: wikipedia.org, image taken by Ritik -->
-		<img src="clownfish.jpg" alt="clownfish">
-		<div class="clownfish-text border">
-			<p id="clownfish-desc">A layer of mucus on the clownfish's skin makes it immune to the fish-eating anemone's lethal sting.</p>
+		<img src="dog-ronto.jpg" alt="Ronto">
+		<div class="animal-information border">
+			<p id="animal-interesting-fact">A layer of mucus on the clownfish's skin makes it immune to the fish-eating anemone's lethal sting.</p>
 			<ul>
-				<li><span>Scientific Name:</span> Amphiprioninae</li>
-				<li><span>Average Length:</span> 11 centimeters</li>
-				<li><span>Average Lifespan:</span> 7 years</li>
-				<li><span>Habitat:</span> Tropical coral reefs</li>
+				<li><span>Scientific Name:</span><i> Amphiprioninae</i></li>
+				<li><span>Average Length:</span><i> 11 centimeters</i></li>
+				<li><span>Average Lifespan:</span><i> 7 years</i></li>
+				<li><span>Habitat:</span><i> Tropical coral reefs</i></li>
 			</ul>
 			<p>Bright orange with three distinctive white bars, clown anemonefish are among the most recognizable of all reef-dwellers. They reach about 11 centimeters in length, and are named for the multicolored sea anemone in which they make their homes.</p>
 		</div>
